<resources>
    <string name="app_name">NavigationSample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="end_chat">END CHAT</string>

    <string name="message">Message</string>
    <string name="btnSend">Send</string>
    <string name="fName">First User Name</string>
    <string name="sName">Second User Name</string>
    <string name="btnStart">START</string>
    <string name="btnEnd">End</string>
    <string name="title">Welcome</string>

</resources>
